RESOLVED FIXED100422
Tiled layers are missing content on zooming
https://bugs.webkit.org/show_bug.cgi?id=100422
Summary Tiled layers are missing content on zooming
Simon Fraser (smfr)
Reported 2012-10-25 15:04:08 PDT
Tiled layers are missing content on zooming
Attachments
Patch (9.76 KB, patch)
2012-10-25 15:25 PDT, Simon Fraser (smfr)
bdakin: review+
Simon Fraser (smfr)
Comment 1 2012-10-25 15:25:01 PDT
Simon Fraser (smfr)
Comment 2 2012-10-25 15:25:45 PDT
Beth Dakin
Comment 3 2012-10-25 15:31:44 PDT
Comment on attachment 170743 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=170743&action=review > Source/WebCore/ChangeLog:19 > + To fix the problem of the visibleRect being pre-scaling "pre-scaling" should probably be "pre-scaled."
Simon Fraser (smfr)
Comment 4 2012-10-25 16:14:20 PDT
Note You need to log in before you can comment on or make changes to this bug.