Source/WebCore/rendering/RenderLayerCompositor.cpp
@@ -1100,12 +1100,6 @@ void RenderLayerCompositor::frameViewDidScroll()
     FrameView* frameView = m_renderView->frameView();
     IntPoint scrollPosition = frameView->scrollPosition();
 
-    if (TiledBacking* tiledBacking = frameView->tiledBacking()) {
-        IntRect visibleContentRect = frameView->visibleContentRect(false /* exclude scrollbars */);
-        visibleContentRect.move(toSize(frameView->scrollOrigin()));
-        tiledBacking->setVisibleRect(visibleContentRect);
-    }
-
     if (!m_scrollLayer)
         return;
 
